<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <string name="icon_name">LocationShare</string>
    
    <string name="map">Map</string>
    <string name="satellite">Satellite</string>
    <string name="normal">Normal</string>
    <string name="center">Center On My Location</string>
    <string name="menu_settings">Settings</string>
    
    <string name="messages">Messages</string>
    <string name="view_messages">View Messages</string>
    <string name="create_message">Create Message</string>
    
    <string name="logout">Logout</string>
    
    
    
    <string name="count_label">Count: </string> 
    <string name="done_button">Done</string>
    
    
    <string name="menu">Menu</string>
    <string name="scan">Scan QR</string>
    <string name="camera">Take Picture</string>
    <string name="save">Save Data</string>
    
    
    
    
    <string name="app_name">LocationShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_id">437712496338892</string>
    
    <string name="error_dialog_title">Something Went Wrong</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="exception">Exception: %1$s</string>
</resources>
